--- a/test-output/Default suite/Default test.html
+++ b/test-output/Default suite/Default test.html
@@ -2,7 +2,7 @@
 <head>
 <title>TestNG:  Default test</title>
 <link href="../testng.css" rel="stylesheet" type="text/css" />
-<link href="../my-testng.css" rel="stylesheet" type="text/css" />
+<!-- <link href="../my-testng.css" rel="stylesheet" type="text/css" />  -->
 
 <style type="text/css">
 .log { display: none;} 
